[package]
name = "sequential-storage-sd-spi"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned = "0.4.2"
block-device-driver = { git = "https://github.com/MabezDev/embedded-fatfs" }
embedded-hal-async = "1.0.0"
embedded-storage-async = "0.4.1"
sdspi = { git = "https://github.com/MabezDev/embedded-fatfs" }
sequential-storage = "2.0.2"
