[package]
name = "embedded-storage-sd-spi"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned = "0.4.2"
block-device-driver = { git = "https://github.com/MabezDev/embedded-fatfs", rev = "d09db27f9e232442f8a874dd90508690e2d5e3f8" }
block-device-adapters = { git = "https://github.com/MabezDev/embedded-fatfs", rev = "d09db27f9e232442f8a874dd90508690e2d5e3f8" }
embedded-io-async = "0.6.1"
embedded-hal-async = "1.0.0"
embedded-storage-async = "0.4.1"
embedded-storage = "0.3.1"
sdspi = { git = "https://github.com/MabezDev/embedded-fatfs", rev = "d09db27f9e232442f8a874dd90508690e2d5e3f8" }
sequential-storage = "2.0.2"
